<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true"
    android:clickable="false">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:freezesText="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.android.life_is_a_quiz.MainActivity"
        tools:showIn="@layout/activity_main"
        android:background="@android:color/darker_gray">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/text1"
                android:scaleType="centerCrop"
                android:src="@drawable/quiz"  />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight="1"
                android:text="1: What is 12*9"
                android:textSize="25sp"
                android:layout_marginTop="80dp"
                android:paddingEnd="50dp"
                android:paddingRight="50dp"
                android:textStyle="bold"
                android:id="@+id/text1"/>
            <CheckBox
                android:id="@+id/checkbox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a1"
                android:lines="1"
                android:textAppearance="?android:textAppearanceMedium"
                android:checked="false"
                 />
            <CheckBox
                android:id="@+id/checkbox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a2"
                android:textAppearance="?android:textAppearanceMedium"
                android:checked="false"
                />
            <CheckBox
                android:id="@+id/checkbox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a3"
                android:textAppearance="?android:textAppearanceMedium"
                android:checked="false"
                 />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="2: Is 4 a composite number"
                android:textSize="25sp"
                android:layout_marginTop="40dp"
                android:textStyle="bold"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/myradio"
                >
                <RadioButton

                    android:id="@+id/yes_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b1"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:checked="false"
                     />
                <RadioButton
                    android:id="@+id/no_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b2"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:checked="false"
                     />
            </RadioGroup>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="3: What is 9 to the power of 3"
                android:textSize="25sp"
                android:layout_marginTop="40dp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/answer_third"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter the answer here"
                android:inputType="textMultiLine"
                 />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="4: Is 100 /0 defined ?"
                android:textSize="25sp"
                android:layout_marginTop="40dp"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/undefine4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d1"
                android:layout_gravity="center_horizontal"
                 />
            <Button
                android:id="@+id/Define4"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:text="@string/d2"
                android:layout_gravity="center_horizontal"
                 />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="5:Count the number of symbols "
                android:id="@+id/text5"
                android:textStyle="bold"
                android:textSize="20sp" />
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_below="@+id/text5"
                android:scaleType="centerCrop"
                android:src="@drawable/famous"
                android:layout_marginLeft="60dp"/>
            <EditText
                android:id="@+id/answer_fifth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter the number of symbols here"
                android:inputType="textMultiLine" />
            <Button
                android:layout_marginTop="0dp"
                android:id="@+id/next_submit2"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:text="@string/submitbutton"
                android:onClick="displayScore"
                android:layout_marginBottom="50dp"
                android:layout_marginRight="75dp"
                android:layout_marginLeft="75dp"
                android:layout_gravity="center_horizontal" />
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_marginLeft="75dp"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:text="@string/restartall"
                android:id="@+id/restart1"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp"
                android:onClick="quizReset"
                android:layout_marginRight="75dp"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>